[#12297] refactor(secret): Tighten create-path helpers and tests
Inline reject-raw-URN into checkSecretKeys, restore
validateUrnEndsWithPropertyKey, rename binding cleanup APIs, inject
FilesetCatalogOperations SecretManager without the single-arg ctor,
and fold/shorten fileset secret unit tests.

Co-authored-by: Cursor <cursoragent@cursor.com>